@@ -86,7 +86,7 @@
   </property>
 
 <property>
-  <name>dfs.block.size</name>
+  <name>dfs.blocksize</name>
   <value>134217728</value>
   <description>The default block size for new files.</description>
 </property>
